splurty - building the about page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         </div>
         <div class="col-5 links">
           <%= link_to 'Contribute', new_quote_path %>
-          <%= link_to 'About', '#' %>
+          <%= link_to 'About', about_path %>
         </div>
 
     </header>
@@ -52,7 +52,7 @@
             <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
           <div class="col-6 footer-blurb">
-            Proudly created by Philip, a student at the coding bootcamp, The Firehose Project: <a href="http://thefirehoseproject.com">Learn how to code here</a>
+            Proudly created by <a target="_blank" href="https://philipvuong.netlify.com/">Philip</a>, a student at the coding bootcamp, The Firehose Project: <a href="http://thefirehoseproject.com">Learn how to code here</a>
           </div>
         </div>
       </div>
