--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,14 @@
           </div>
         <% end %>
         </div>
-        <div class="col-4 slogan">
+        <div class="col col-sm-4 hidden-xs-down slogan">
           Quotes so fresh you could find them at a farmers market.
         </div>
-        <div class="col-5 links">
+        <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
 
     <!-- Button trigger modal -->
-          <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>          
+          <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>   
+          &nbsp;&nbsp;       
           <%= link_to 'About', about_path %>
         </div>
 
@@ -48,8 +49,9 @@
           </div>
           <%= simple_form_for Quote.new do |f| %>
             <div class="modal-body">
-                <%= f.input :saying %>
-                <%= f.input :author %>
+                <%= f.input :saying, label: "What is a saying you would like to add?", placeholder: "Laziness is nothing more than the habit of resting before you get tired."%>
+                <br />
+                <%= f.input :author, label: "Who is the author of the quote?", placeholder: "Jules Renard" %>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -77,10 +79,10 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-sm-6">
             <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
-          <div class="col-6 footer-blurb">
+          <div class="col-12 col-sm-6 footer-blurb">
             Proudly created by <a target="_blank" href="https://philipvuong.netlify.com/">Philip</a>, a student at the coding bootcamp, The Firehose Project: <a href="http://thefirehoseproject.com">Learn how to code here</a>
           </div>
         </div>
