--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
           <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>   
           &nbsp;&nbsp;       
           <%= link_to 'About', about_path %>
+          &nbsp;&nbsp;  
+          <%= link_to 'Sign up now!', signup_path,  class: "btn btn-sm btn-primary" %>
         </div>
 
     </header>
