--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         </div>
         <div class="col col-sm-4 hidden-xs-down slogan">
           Quotes so fresh you could find them at a farmers market.
+
         </div>
         <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
 
@@ -34,8 +35,8 @@
           &nbsp;&nbsp;  
           <%= link_to 'Sign up now!', signup_path,  class: "btn btn-sm btn-primary" %>
         </div>
-
     </header>
+
 
 
 
@@ -70,6 +71,11 @@
     <br class="clear" />
 
     <div class="container">
+      <% flash.each do |message_type, message| %>
+<!--  <div class="alert alert-<%= message_type %>"><%= message %></div> -->
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
+
       <% if flash[:error].present? %>
         <div class="col-10 offset-1 alert-danger">
           <%= flash[:error].html_safe %>
@@ -89,6 +95,9 @@
           </div>
         </div>
       </div>
+        <p>
+          <%= debug(params) if Rails.env.development? %>
+        </p>
     </div>
 
   </body>
