--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,14 +33,14 @@
           <ul class="nav navbar-right">
             <li><%= link_to 'About', about_path %></li>&nbsp;&nbsp;&nbsp;&nbsp;
             <% if logged_in? %>
-              <li><%= link_to "Users", '#' %></li>&nbsp;&nbsp;&nbsp;&nbsp;
+              <li><%= link_to "Users", users_path %></li>&nbsp;&nbsp;&nbsp;&nbsp;
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">   Account <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
                 <li><%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %></li>    
                   <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Settings", '#' %></li>
+                  <li><%= link_to "Settings", edit_user_path(current_user) %></li>
 
                   <li class="divider"></li>
                   <li>
